--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,22 @@
-<p>header works!</p>
+<header>
+    <section>
+        <div id="header">
+            <div id="esquerda">
+                <img src="assets\img\Group 2.png" alt="copa" id="fifa"> 
+            </div>
+            
+            <div id="listra-vermelha">
+                <div id="bloco-azul">
+                    <div id="bloco-verde">
+
+                    </div>
+                </div>
+            </div>
+
+            <div id="direita">
+                <img src="assets\img\Group 14.png" alt="copa" id="brasil">
+            </div>
+        </div>
+
+    </section>
+</header>
