--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,4 +1,4 @@
-section{
+#header{
     width: 100%;
     height: 120px;
     background-color: #F2F602;
@@ -6,10 +6,9 @@ section{
     display: flex;
     justify-content: center;
 }
-#header {
+#secao-interna {
     width:1280px;
     height: 120px;
-    background-color: #F2F602;
     display: flex;
     justify-content: center;
 }
@@ -25,6 +24,9 @@ section{
     background-color: rgba(0, 148, 65, 1);
     width: 645px;
     height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
 #fifa{
@@ -36,15 +38,26 @@ section{
     height: 102px;
 }
 #esquerda{
-    width:100%;
+    width:285px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+#direita{
+    width:285px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-#direita{
-    width:100% ;
-    display: flex;
-    justify-items: center;
+#nav-menu{
+    height: 20px;
+}
+.texto-menu{
+    padding: 20px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
 }
 
 
