--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
-    <section>
-        <div id="header">
+    <section id="header">
+        <div id="secao-interna">
             <div id="esquerda">
                 <img src="assets\img\Group 2.png" alt="copa" id="fifa"> 
             </div>
@@ -8,7 +8,12 @@
             <div id="listra-vermelha">
                 <div id="bloco-azul">
                     <div id="bloco-verde">
-
+                        <div id="nav-menu">
+                            <span class="texto-menu" >Início</span>
+                            <span class="texto-menu" >Grupos</span>
+                            <span class="texto-menu" >Estádios</span>
+                            <span class="texto-menu" >Fale Conosco</span>
+                        </div>
                     </div>
                 </div>
             </div>
