página inicial e grupos primerio commit vitor

--- a/src/app/components/tela-inicial/tela-inicial.component.html
+++ b/src/app/components/tela-inicial/tela-inicial.component.html
@@ -1,1 +1,21 @@
-<p>tela-inicial works!</p>
+<body>
+    <section id="tela-inicial">
+        <div id="largura">
+            <img id="imagem" src="assets\img\Group 16.png">
+
+
+            <div id="meio">
+                <span id="bolinha-esquerda"></span> 
+                <div id="bola-esquerda"></div>
+                <span id="box-vermelho">COPA DO MUNDO KATAR 2022</span>
+                <div id="bola-direita"></div> 
+                <span id="bolinha-direita"></span>
+            </div>
+
+            <div id="final">TEMPO ATÉ O JOGO DO BRASIL:</div>
+            <div id="tempo">30 D<div class="divisor"></div>40 H<div class="divisor"></div>30 M<div class="divisor"></div>40 S</div>
+
+
+        </div>
+    </section>
+</body>
