--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,34 @@
-<p>footer works!</p>
+<footer  class="main-container">
+    <div class="nav-footer">
+        <div class="logo">
+            <img src="assets\img\blogo.png" alt="logo">
+            <p>(xx) x xxxx-xxxx</p>
+            <p>acopanha@gmail.com</p>
+        </div>
+        <div class="ul">
+            <div class="lista-container">
+                <h1 class="titulo">Links Rápidos</h1>
+                <ul class="lista">
+                    <li>Fale Conosco</li>
+                    <li>Política de Privacidade</li>
+                    <li>Assistir o Jogo</li>
+                </ul>
+            </div>
+            <div class="lista-container">
+                <h1 class="titulo">Outros Links</h1>
+                <ul class="lista">
+                <li>Jogos</li>
+                <li>Estádios</li>
+                <li>Tempo Restante</li>
+                </ul>
+            </div>
+        </div>
+        <div class="contatos">
+            <img src="assets\img\youtube.png" alt="ytb" class="ytblog">
+            <img src="assets\img\instagram.png" alt="insta" class="instalog">
+        </div>
+    </div>
+    <div class="footer-nav">
+        <p>Acopanha © 2022. Todos os direitos reservados. Una</p>
+    </div>
+</footer>
