--- a/src/app/components/tela-estadios/tela-estadios.component.html
+++ b/src/app/components/tela-estadios/tela-estadios.component.html
@@ -1,1 +1,94 @@
-<p>tela-estadios works!</p>
+<article>
+        
+    <div class="main-container">
+        <h1>
+            ESTÁDIOS
+        </h1>
+
+        <h2 class="subtitulos">
+            Os jogos da Copa do Mundo de 2022 (de 20 de novembro a 18 de dezembro), no Catar, serão distribuídos em oito estádios, dos quais apenas um já existia quando o país foi escolhido como sede do torneio. Estes são os estádios que serão palco do maior evento de futebol do planeta:
+
+        </h2>
+        
+        <img src="assets\img\esstad1-974.png" alt="estadion1" class="estadios">
+
+        <div class="paragrafos">
+            <p>
+            Estádio 974 (80 mil lugares) <br>
+            O estádio 974 fica à beira-mar, em Doha, na capital do país. Com capacidade para até 40 mil pessoas, foi construído utilizando contêineres marítimos, como forma de homenagear a atividade portuária da cidade. Além disso, 974 também é o código de discagem internacional do Catar.É o primeiro estádio da Fifa que pode ser completamente desmontado após o evento e remontado da mesma forma em outro lugar. Seus materiais também podem ser reaproveitados para construir outras estruturas.
+
+            </p>
+        </div>
+
+        <img src="assets\img\eestad3.png" alt="estadion2" class="estadios">
+        
+        <div class="paragrafos">
+            
+            <p>
+                Estádio Al Thumama (40 mil lugares) <br>
+                O design do estádio Al Thumana foi inspirado na “gahfiya” – uma touca tradicionalmente usada pelos homens árabes no Oriente Médio.Ele também fica na capital do Catar e tem capacidade para 40 mil torcedores. Os arredores da construção devem ser usados para abrigar um centro poliesportivo, com espaços destinados para quadras de vôlei, handebol, basquete e uma piscina para natação.
+
+            </p>
+        </div>
+
+        <img src="assets\img\estadkhalifa.png" alt="estadion3" class="estadios">
+
+        <div class="paragrafos">
+            <p>
+            Estádio Khalifa International (40 mil lugares) <br>
+            O estádio, construído em 1976, passou por uma reforma para receber os jogos da Copa do Mundo, mas manteve em sua estrutura os dois arcos que passam por cima da construção.É o estádio mais antigo do Catar, fica localizado na capital, e é o único que já existia antes do anúncio de que o país seria sede do campeonato mundial. Após as reformas, tem capacidade para 40 mil pessoas.
+
+            </p>
+        </div>
+
+        <img src="assets\img\AhmadBinAli.png" alt="estadion4" class="estadios">
+
+        <div class="paragrafos">
+            <p>
+            Estádio Ahmad bin Ali (40 mil lugares) <br>
+            O estádio possui uma fachada brilhante, e fica na cidade de Al Rayyan, há aproximadamente 12 km da capital Doha, ao lado de um deserto. O lugar também deve contar com um conjunto de instalações esportivas.O local costumava abrigar o antigo estádio sede do time de futebol Al Rayyan Sports Club. Ele foi demolido para dar lugar à nova construção, que agora abriga 40 mil assentos e seguirá sendo a casa do clube após a Copa.
+
+            </p>
+        </div>
+
+        <img src="assets\img\AlBayt.png" alt="estadion5" class="estadios">
+
+        <div class="paragrafos">
+            <p>
+            Estádio AL Bayt (60 mil lugares) <br>
+            O estádio foi inspirado nas tendas usadas historicamente pelos povos nômades do Catar e da região do Golfo Pérsico – chamadas de “bayt al sha’ar”. O lugar tem capacidade para 60 mil pessoas e vai receber a partida de abertura da Copa do Mundo.A construção fica na cidade de Al Khor, cerca de 50 km ao norte de Doha. A área do estádio também deve contar com instalações poliesportivas e áreas para andar a cavalo e de camelo. A área deve ser reaproveitada para abrigar diversos comércios depois de 2022.
+
+            </p>
+        </div>
+
+        <img src="assets\img\estad6.png" alt="estadion6" class="estadios">
+
+        <div class="paragrafos">
+            <p>
+            Estádio Al Janoub (40 mil lugares) <br>
+            Este estádio teve seu projeto inspirado nos barcos “dhow”, veleiros usados tradicionalmente na região do Mar Vermelho para a pesca e a busca por pérolas.O design é uma forma de homenagear o passado e a tradição marítima da cidade de Al Wakrah, há cerca de 20 km ao sul de Doha, onde a construção está localizada. Sua capacidade é de 40 mil pessoas.
+
+            </p>
+        </div>
+
+        <img src="assets\img\Lusail.png" alt="estadion7" class="estadios">
+
+        <div class="paragrafos">
+            <p>
+            Estádio Lusail (80 mil lugares) <br>
+            O maior dos estádios construídos receberá a final do Mundial, no dia 18 de dezembro, além de outros jogos. Está localizado em Lusail, uma cidade especificamente criada para o evento. Foi oficialmente inaugurado no início de setembro, durante a Super Copa Lusail, disputada entre o campeão da Arábia Saudita, o Al-Hilal, e o campeão do Egito, o Zamalek.
+
+            </p>
+        </div>
+
+        <img src="assets\img\educationcity.png" alt="estadion8" class="estadios">
+
+        <div class="paragrafos">
+            <p>
+                A fachada desse estádio é feita de triângulos que juntos formam padrões geométricos parecidos com diamantes, e que mudam conforme a luz do sol se move durante o dia.Com 40 mil assentos, a arena fica na cidade de Al Rayyan, em uma área cercada por universidades, e seu espaço deve ser utilizado como centro esportivo para a comunidade e para os universitários após a Copa.
+
+            </p>
+        </div>
+    </div>
+
+</article>
