fale conoco tele inicial

--- a/src/app/components/tela-grupos/tela-grupos.component.html
+++ b/src/app/components/tela-grupos/tela-grupos.component.html
@@ -1,1 +1,85 @@
-<p>tela-grupos works!</p>
+
+<section id="grupos">
+    <div id="textos">
+        <h2>Grupos</h2>
+        <ul>
+        <h3>Grupo A</h3>
+            <li>20/11 – 13h00 – Catar x Equador – Estádio Al Bayt21/11 – 13h00 – Senegal x Holanda – Estádio Al Thumama</li>
+            <li>25/11 – 10h00 – Catar x Senegal – Estádio Al Thumama25/11 – 13h00 – Holanda x Equador – Estádio Internacional Khalifa</li>
+            <li>29/11 – 12h00 – Holanda x Catar – Estádio Al Bayt29/11 – 12h00 – Equador x Senegal – Estádio Internacional Khalifa</li>
+        </ul>
+        
+        <ul>
+            <h3>Grupo B</h3>
+            <li>21/11 – 10h00 – Inglaterra x Irã – Estádio Internacional Khalifa21/11 – 16h00 – Estados Unidos x Gales – Estádio Ahmad bin Ali</li>
+            <li>25/11 – 07h00 – Gales x Irã – Estádio Ahmed bin Ali25/11 – 16h00 – Inglaterra x Estados Unidos – Estádio Al Bayt</li>
+            <li>29/11 – 16h00 – Gales x Inglaterra – Estádio Ahmad bin Ali29/11 – 16h00 – Irã x Estados Unidos – Estádio Al Thumama</li>
+        </ul>
+        
+        <ul>
+            <h3>Grupo C</h3>
+            <li>22/11 – 07h00 – Argentina x Arábia Saudita – Estádio Nacional de Lusail22/11 – 13h00 – México x Polônia – Estádio 974</li>
+            <li>26/11 – 10h00 – Polônia x Arábia Saudita – Estádio Cidade da Educação26/11 – 16h00 – Argentina x México – Estádio Nacional de Lusail</li>
+            <li>30/11 – 16h00 – Arábia Saudita x México – Estádio Nacional de Lusail30/11 – 16h00 – Polônia x Argentina – Estádio 974</li>
+        </ul>
+        
+        <ul>
+            <h3>Grupo D</h3>
+            <li>22/11 – 10h00 – Dinamarca x Tunísia – Estádio Cidade da Educação22/11 – 16h00 – França x Austrália – Estádio Al Janoub</li>
+            <li>26/11 – 07h00 – Tunísia x Austrália – Estádio Al Janoub26/11 – 13h00 – França x Dinamarca – Estádio 974</li>
+            <li>30/11 – 12h00 – Tunísia x França – Estádio Cidade da Educação30/11 – 12h00 – Austrália x Dinamarca – Estádio Al Janoub</li>
+        </ul>
+        
+        <ul>
+            <h3>Grupo E</h3>
+            <li>23/11 – 10h00 – Alemanha x Japão – Estádio Internacional Khalifa23/11 – 13h00 – Espanha x Costa Rica ou Nova Zelândia – Estádio Al Thumama</li>
+            <li>27/11 – 07h00 – Japão x Costa Rica ou Nova Zelândia – Estádio Ahmad bin Ali27/11 – 16h00 – Espanha x Alemanha – Estádio Al Bayt</li>
+            <li>01/12 – 16h00 – Japão x Espanha – Estádio Internacional Khalifa01/12 – 16h00 – Costa Rica ou Nova Zelândia x Alemanha – Estádio Al Bayt</li>
+        </ul>
+        
+        <ul>
+            <h3>Grupo F</h3>
+            <li>23/11 – 07h00 – Marrocos x Croácia – Estádio Al Bayt23/11 – 16h00 – Bélgica x Canadá – Estádio Ahmad bin Ali</li>
+            <li>27/11 – 10h00 – Bélgica x Marrocos – Estádio Al Thumama27/11 – 13h00 – Croácia x Canadá – Estádio Internacional Khalifa</li>
+            <li>01/12 – 12h00 – Croácia x Bélgica – Estádio Ahmad bin Ali01/12 – 12h00 – Canadá x Marrocos – Estádio Al Thumama</li>
+        </ul>
+        
+        <ul>
+            <h3>Grupo G</h3>
+            <li>24/11 – 07h00 – Suíça x Camarões – Estádio Al Janoub24/11 – 16h00 – Brasil x Sérvia – Estádio Nacional de Lusail</li>
+            <li>28/11 – 07h00 – Camarões x Sérvia – Estádio Al Janoub28/11 – 13h00 – Brasil x Suíça – Estádio 974</li>
+            <li>02/12 – 16h00 – Camarões x Brasil – Estádio Nacional de Lusail02/12 – 16h00 – Sérvia x Suíça – Estádio 974</li>
+        </ul>
+        
+        <ul>
+            <h3>Grupo H</h3>
+            <li>24/11 – 10h00 – Uruguai x Coreia do Sul – Estádio Cidade da Educação24/11 – 13h00 – Portugal x Gana – Estádio 974</li>
+            <li>28/11 – 10h00 – Coreia do Sul x Gana – Estádio Cidade da Educação28/11 – 16h00 – Portugal x Uruguai – Estádio Nacional de Lusail</li>
+            <li>02/12 – 12h00 – Coreia do Sul x Portugal – Estádio Cidade da Educação02/12 – 12h00 – Gana x Uruguai – Estádio Al Janoub</li>
+        </ul>
+        
+        <ul>
+            <h3>Oitavas de final</h3>
+            <li>03/12 – 12h00 – 1ºA x 2ºB – Estádio Internacional Khalifa – jogo 4903/12 – 16h00 – 1ºC x 2ºD – Estádio Ahmad bin Ali – jogo 50</li>
+            <li>04/12 – 12h00 – 1ºD x 2ºC – Estádio Al Thumama – jogo 5204/12 – 16h00 – 1ºB x 2ºA – Estádio Al Bayt – jogo 51</li>
+            <li>05/12 – 12h00 – 1ºE x 2ºF – Estádio Al Janoub – jogo 5305/12 – 16h00 – 1ºG* x 2ºH – Estádio 974 – jogo 54</li>
+            <li>06/12 – 12h00 – 1ºF x 2ºE – Estádio Cidade da Educação – jogo 5506/12 – 16h00 – 1ºH x 2ºG* – Estádio Nacional de Lusail – jogo 56</li>
+        </ul>
+        
+        <ul>
+            <h3>Grupo do Brasil - Quartas de final</h3>
+            <li>09/12 – 16h00 – Vencedor 53 x Vencedor 54 – Estádio Nacional de Lusail09/12 – 12h00 – Vencedor 49 x Vencedor 50 – Estádio Cidade da Educação</li>
+            <li>10/12 – 16h00 – Vencedor 55 x Vencedor 56 – Estádio Al Bayt10/12 – 12h00 – Vencedor 51 x Vencedor 52 – Estádio Al Thumama</li>
+            <br>
+            <h3>Semifinais</h3>
+            <li>13/12 – 16h00 – Vencedores das quartas do dia 09/12 – Estádio Nacional de Lusail</li>
+            <li>14/12 – 16h00 – Vencedores das quartas do dia 10/12 – Estádio Al Bayt</li>
+            <br>
+            <h3>Disputa de terceiro lugar</h3>
+            <li>17/12 – 12h00 – Perdedores das semifinais – Estádio Internacional Khalifa</li>
+            <br>
+            <h3>Final</h3>
+            <li>18/12 – 12h00 – Vencedores das semifinais – Estádio Nacional de Lusail</li>
+        </ul>
+    </div>
+</section>
