mensagem tela-innical - form  header uptade

--- a/src/app/components/tela-fale-conosco/tela-fale-conosco.component.html
+++ b/src/app/components/tela-fale-conosco/tela-fale-conosco.component.html
@@ -1,1 +1,22 @@
-<p>tela-fale-conosco works!</p>
+<section id="fale-conosco">
+    <section id="espacamento">
+        <div id="titulo">
+            <h2>Tem Alguma Dúvida?</h2>
+            <h3>Fale Conosco</h3>
+        </div>
+        <div id="div-formulario">
+            
+            <form method="get" action="envio_dados.php">
+                <div id="coluna-form">
+                    <input type="text" id="nome" name="nome" placeholder=" Nome Completo">
+                    <input type="e-mail" id="mail" name="email" placeholder=" email@exemplo.com">
+                </div>
+                <textarea id="msg" placeholder=" Deixe sua mensagem"></textarea>
+                <input type="submit" id="botao" name="enviar" value="Enviar">
+                
+            </form>
+
+        </div>
+        
+    </section>
+</section>
