redirecionamento header para outras páginas

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,10 +9,11 @@
                 <div id="bloco-azul">
                     <div id="bloco-verde">
                         <div id="nav-menu">
-                            <span class="texto-menu" >Início</span>
-                            <span class="texto-menu" >Grupos</span>
-                            <span class="texto-menu" >Estádios</span>
-                            <span class="texto-menu" >Fale Conosco</span>
+                            <a href="http://localhost:4200">Início</a>
+                            <a href="http://localhost:4200/grupos">Grupos</a>
+                            <a href="http://localhost:4200/estadios">Estádios</a>
+                            <a href="http://localhost:4200/tela-video">Assistir</a>
+                            <a href="http://localhost:4200/fale-conosco">Fale Conosco</a>
                         </div>
                     </div>
                 </div>
