--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -58,7 +58,9 @@
 #nav-menu{
     height: 20px;
 }
-.texto-menu{
+
+a{
+    text-decoration: none;
     padding: 20px;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
