--- a/src/app/components/tela-grupos/tela-grupos.component.html
+++ b/src/app/components/tela-grupos/tela-grupos.component.html
@@ -1,7 +1,8 @@
 
 <section id="grupos">
     <div id="textos">
-        <h2>Grupos</h2>
+       
+        <h2>GRUPOS:</h2>
         <ul>
         <h3>Grupo A</h3>
             <li>20/11 – 13h00 – Catar x Equador – Estádio Al Bayt21/11 – 13h00 – Senegal x Holanda – Estádio Al Thumama</li>
