--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,17 +9,17 @@
             <div class="lista-container">
                 <h1 class="titulo">Links Rápidos</h1>
                 <ul class="lista">
-                    <li>Fale Conosco</li>
+                    <li><a class="liFotter" href="http://localhost:4200/fale-conosco">Fale Conosco</a></li>
                     <li>Política de Privacidade</li>
-                    <li>Assistir o Jogo</li>
+                    <li><a class="liFotter" href= "http://localhost:4200/tela-video">Assistir o Jogo</a></li>
                 </ul>
             </div>
             <div class="lista-container">
                 <h1 class="titulo">Outros Links</h1>
                 <ul class="lista">
-                <li>Jogos</li>
-                <li>Estádios</li>
-                <li>Tempo Restante</li>
+                <li><a class="liFotter" href="http://localhost:4200/grupos">Jogos</a></li>
+                <li><a class="liFotter" href="http://localhost:4200/estadios">Estádios</a></li>
+                <li><a class="liFotter" href="http://localhost:4200">Tempo Restante</a></li>
                 </ul>
             </div>
         </div>
