--- a/src/app/components/tela-inicial/tela-inicial.component.html
+++ b/src/app/components/tela-inicial/tela-inicial.component.html
@@ -13,7 +13,7 @@
             </div>
 
             <div id="final">TEMPO ATÉ O JOGO DO BRASIL:</div>
-            <div id="tempo">30 D<div class="divisor"></div>40 H<div class="divisor"></div>30 M<div class="divisor"></div>40 S</div>
+            <div id="tempo">Brasil eliminado :(</div>
 
 
         </div>
